# voxel-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/shaders/: default.frag  default.geom  default.vert
src/: cube.h  main.cpp  other.cpp  params.h
src/gfx/: blockatlas.h  camera.cpp  camera.h  gfx.h  shader.cpp  shader.h  ssbo.cpp  ssbo.h  texture.cpp  texture.h  utils.cpp  utils.h  vao.cpp  vao.h  vbo.cpp  vbo.h  window.cpp  window.h
src/ui/: nuklear_gl3.h  ui.h
src/world/: blocks.h  chunk.cpp  chunk.h  world.cpp  world.h  world_generator.cpp  world_generator.h
